# Mobile_Robot_Base

./: README.md
.catkin_tools/profiles/default/: devel_collisions.txt
devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
devel/.private/base_control/: .catkin
devel/.private/base_control/include/base_control/: Winkel.h  base_wheel_vel.h
devel/.private/base_control/lib/base_control/: base_motor_controller
devel/.private/base_control/lib/pkgconfig/: base_control.pc
devel/.private/catkin_tools_prebuild/: .catkin  .rosinstall
devel/.private/catkin_tools_prebuild/lib/pkgconfig/: catkin_tools_prebuild.pc
devel/.private/motion_control/: .catkin  setup.sh
devel/.private/motion_control/lib/motion_control/: motion_control_start
devel/.private/motion_control/lib/pkgconfig/: motion_control.pc
devel/.private/sensor_fusion_kalman/: .catkin  local_setup.sh
devel/.private/state_estimator/: .rosinstall
devel/.private/state_estimator/lib/pkgconfig/: state_estimator.pc
devel/include/base_control/: Winkel.h  base_wheel_vel.h
devel/lib/base_control/: base_motor_controller
devel/lib/motion_control/: motion_control_start
devel/lib/pkgconfig/: base_control.pc  catkin_tools_prebuild.pc  motion_control.pc
devel/lib/python3/dist-packages/base_control/: __init__.py
devel/share/base_control/cmake/: base_control-msg-extras.cmake  base_control-msg-paths.cmake  base_controlConfig-version.cmake  base_controlConfig.cmake
devel/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig-version.cmake  catkin_tools_prebuildConfig.cmake
devel/share/gennodejs/ros/base_control/: _index.js
devel/share/motion_control/cmake/: motion_control-msg-extras.cmake  motion_control-msg-paths.cmake  motion_controlConfig-version.cmake  motion_controlConfig.cmake
logs/base_control/: build.make.007.log.stderr
logs/motion_control/: build.check.113.log.stderr  build.cmake.000.log.stderr  build.make.000.log.stderr  build.make.001.log.stderr  build.make.002.log.stderr  build.make.003.log.stderr  build.make.004.log.stderr  build.make.029.log.stderr  build.make.034.log.stderr  build.make.036.log.stderr  build.make.038.log.stderr  build.make.050.log.stderr  build.make.051.log.stderr  build.make.052.log.stderr  build.make.053.log.stderr  build.make.055.log.stderr  build.make.056.log.stderr  build.make.061.log.stderr  build.make.062.log.stderr  build.make.063.log.stderr  build.make.072.log.stderr  build.make.075.log.stderr  build.make.076.log.stderr  build.make.077.log.stderr  build.make.078.log.stderr  build.make.079.log.stderr  build.make.080.log.stderr  build.make.111.log.stderr  build.make.112.log.stderr  build.make.113.log.stderr  build.make.131.log.stderr  build.make.133.log.stderr  build.make.138.log.stderr  build.make.152.log.stderr  build.make.153.log.stderr  build.make.162.log.stderr  build.make.163.log.stderr  build.make.166.log.stderr  build.make.169.log.stderr  build.make.174.log.stderr  (+5 more)
logs/sensor_fusion_kalman/: build.cmake.000.log.stderr
logs/state_estimator/: build.cmake.000.log.stderr  build.make.000.log.stderr  build.make.003.log.stderr
src/base_control/: CMakeLists.txt
src/base_control/include/: SocketNTCAN.h
src/base_control/msg/: Winkel.msg
src/base_control/scripts/: base_joy_control (copy).py  base_joy_control copy.py  base_joy_control.py  base_keyboard_control.py
src/base_control/src/: SocketNTCAN.cpp  base_velocity_controller.cpp  mecaBox.cpp  mecaBox.h
src/motion_controller/: CMakeLists.txt  package.xml
src/motion_controller/include/motion_controller/: motion_control.h
src/motion_controller/src/: motion_control.cpp
src/state_estimator/: CMakeLists.txt
src/state_estimator/src/: state_estimator.cpp
(+40 files in other folders)
