<?xml version="1.0"?>
<package format="2">
  <name>motion_control</name>
  <version>0.0.0</version>
  <description>The motion controller for the base.</description>

  <!-- This section lists the maintainers of the package -->
  <maintainer email="berke.erikan@gmail.com">Berke Erikan</maintainer>

  <!-- The license under which this package is distributed -->
  <license>BSD-3-Clause</license>

  <!-- Build system and dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>base_control</build_depend>
   <build_depend>eigen</build_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>base_control</exec_depend>
  <exec_depend>eigen</exec_depend>
  <depend>tf</depend>


  <!-- Test dependencies (if any) -->
  <!-- Uncomment and add test dependencies if necessary -->
  <!-- <test_depend>gtest</test_depend> -->

  <!-- This package contains custom message types -->
  <export>
    <message_runtime/>
  </export>
</package>
